force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Max_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Lead_Time__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Number of days maximum allowed to place an order in front of the planned delivery date.</description>
    <label>Max Lead Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>