force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Max_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Order_Value__c</fullName>
    <description>Maximum of order value accepted for orders of this template.</description>
    <label>Max Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>