force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Min_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Min_Lead_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days minimum needed for processing the order and preparing the delivery.</description>
    <label>Min Lead Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>