force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Min_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Min_Order_Value__c</fullName>
    <description>Minimum of order value accepted for orders of this template. Only considered if &gt;=0.01.</description>
    <label>Min Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>