force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Mobility_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls validation of restrictions that are necessary for usage on the mobility devices.</description>
    <label>Mobility Relevant</label>
    <type>Checkbox</type>
</CustomField>