force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Notify_Outdated_Calculation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Notify_Outdated_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the system gives a warning about an outdated complex pricing calculation when opening the order.</description>
    <label>Notify Outdated Calculation</label>
    <type>Checkbox</type>
</CustomField>