force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Number_Of_Historic_Quantities__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_Of_Historic_Quantities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of historical orders that will be considered for quantity suggestion.</description>
    <label>Number Of Historic Quantities</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>