force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Number_Of_Main_Associations__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_Of_Main_Associations__c</fullName>
    <description>Displays number of main order item order template association records.</description>
    <label>Number of Main Associations</label>
    <summaryFilterItems>
        <field>cgcloud__Order_Item_Order_Template_Association__c.cgcloud__Main__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Order_Item_Order_Template_Association__c.cgcloud__Order_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>