force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Order_Details_Json__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Details_Json__c</fullName>
    <description>Enter the custom JSON that’s used to display the fields from the Order Details object.</description>
    <label>Custom JSON for Order Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>