force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Order_Items_Json__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Items_Json__c</fullName>
    <description>Enter the custom JSON that’s used to display the fields from the Order Items object.</description>
    <label>Custom JSON for Order Items</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>