force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Payment_Modification_Reason__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Payment_Modification_Reason__c</fullName>
    <description>Specifies whether modification reasons can be entered for difference in payments.</description>
    <label>Payment Modification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notrequired</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>