force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Price_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Type__c</fullName>
    <description>Determines the Price Type for every product</description>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>factory</fullName>
            </value>
            <value>
                <fullName>consumer</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>