force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Date__c</fullName>
    <description>Defines which date is used for complex price calculation.</description>
    <label>Pricing Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OrderDate</fullName>
            </value>
            <value>
                <fullName>DeliveryDate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>