force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Type__c</fullName>
    <description>Defines the pricing type of the order template.</description>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>T</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>