force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Product_Check_In_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Check_In_Policy__c</fullName>
    <description>Defines if complete or partial product check in is required at the end of a tour.</description>
    <label>Product Check In Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>