force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Product_Selector_Groups__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Selector_Groups__c</fullName>
    <description>Used for mobility</description>
    <label>Product Selector Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Basket</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Out of Stock</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Sub-Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>