force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Promotion_Filter_Selection__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Filter_Selection__c</fullName>
    <description>This field allows the user to select if the order will be loaded with a selected promotion by default.</description>
    <label>Promotion Filter Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>No Promotion</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>First Promotion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>