force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Promotion_Finding__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Finding__c</fullName>
    <description>Reference to the promotion finding template.</description>
    <label>Promotion Finding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>