force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Promotion_Finding_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Finding_Date__c</fullName>
    <description>Controls which date is used for the product finding algorithms of promotion tactics.</description>
    <label>Promotion Finding Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InitiationDate</fullName>
            </value>
            <value>
                <fullName>OrderDate</fullName>
            </value>
            <value>
                <fullName>DeliveryDate</fullName>
            </value>
            <value>
                <fullName>ListingDate</fullName>
                <default>true</default>
                <label>ListingDate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>