force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Quantity_Rounding__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Quantity_Rounding__c</fullName>
    <description>Quantity Rounding</description>
    <label>Quantity Rounding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Off</fullName>
                <default>true</default>
                <label>Off</label>
            </value>
            <value>
                <fullName>RoundingDefaultOn</fullName>
            </value>
            <value>
                <fullName>RoundingDefaultOff</fullName>
            </value>
            <value>
                <fullName>RoundingAlwaysOn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>