force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Recalculation_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Recalculation_Required__c</fullName>
    <description>Controls if forced recalculation is required in complex pricing if calculation date diverges from current date.</description>
    <label>Recalculation Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>YesNotify</fullName>
            </value>
            <value>
                <fullName>AlwaysCalculate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>