force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Release_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Release_Platform__c</fullName>
    <description>Describes platform which can be used to release the Order referencing this template.</description>
    <label>Release Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>