force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Report__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Report__c</fullName>
    <description>Controls which type of report is used.</description>
    <label>Report</label>
    <length>50</length>
    <type>Text</type>
</CustomField>