force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Sales_Document_Assortment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Document_Assortment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, whether the sales document template assortment is used for presetting the disposal list.

    - 0/No: The system doesn&apos;t consider any sales document template assortment.

    - 1/Yes: The system presets the disposal list subject to the sales document template assortment. All other template attributes for the disposal list control have to be considered also.</description>
    <label>Sales Document Assortment</label>
    <type>Checkbox</type>
</CustomField>