force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Sales_Document_Assortment_Filter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Document_Assortment_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, whether the sales document template assortment has to be considered when building and validating the disposal list or not.</description>
    <label>Sales Document Filter</label>
    <type>Checkbox</type>
</CustomField>