force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Selling_Assortment_Filter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Selling_Assortment_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls ,whether the customer selling assortment has to be considered when validating the disposal list or not.

    No: The system doesn&apos;t consider any customer selling assortment.

    Yes: The system filters the disposal list subject to the customer selling assortment. The validation although checks the assignment of each product to the according assortment.</description>
    <label>Selling Assortment Filter</label>
    <type>Checkbox</type>
</CustomField>