force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Signature_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Signature_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to a signature template</description>
    <label>Signature Template</label>
    <referenceTo>cgcloud__Signature_Template__c</referenceTo>
    <relationshipLabel>Order Templates</relationshipLabel>
    <relationshipName>Order_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>