force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Special_Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Special_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The ability to use the template together with talon tactics.</description>
    <label>Special Order</label>
    <type>Checkbox</type>
</CustomField>