force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Special_Order_Handling__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Special_Order_Handling__c</fullName>
    <description>To be used for complex pricing calculation</description>
    <label>Special Order Handling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>InclusiveSpecialOrder</fullName>
                <label>Inclusive Special Order</label>
            </value>
            <value>
                <fullName>ExclusiveSpecialOrder</fullName>
                <label>Exclusive Special Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>