force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Sync_Options__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sync_Options__c</fullName>
    <description>Sync Options.</description>
    <label>Sync Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>ReleaseCancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>