force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__System_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__System_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to System Number</description>
    <label>Mobile Number Definition</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__System_Number__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__System_Number__c</referenceTo>
    <relationshipLabel>Order Templates</relationshipLabel>
    <relationshipName>Order_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>