force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Transaction_Receiver__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transaction_Receiver__c</fullName>
    <description>The attribute specifies for whom inventory transactions will be written (e.g. for the initiator or the owner of the respective sales/inventory document).</description>
    <label>Transaction Receiver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiator</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>