force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Use_Built_In_Pricing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Built_In_Pricing__c</fullName>
    <description>Controls, whether the built in pricing is used or the whole pricing is done by a user exit.</description>
    <label>Use Built-In Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>