force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Use_Customer_Document_TA_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Customer_Document_TA_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the handling type of the customer will be taken into account.</description>
    <label>Use Customer Document TA Type</label>
    <type>Checkbox</type>
</CustomField>