force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__User_Roles__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Roles__c</fullName>
    <description>User roles assigned to the Order Template.
    NOTE: Please ensure the master picklist values exactly match Technical Name of the permission sets or Custom Permissions. Set the user value in Translation. (e.g. CGCloud_Master_Data_Admin is the master picklist value, Master Data Admin is translated value).</description>
    <label>User Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CGCloud_Master_Data_Admin</fullName>
            </value>
            <value>
                <fullName>CGCloud_KAM</fullName>
            </value>
            <value>
                <fullName>CGCloud_Retail_Admin</fullName>
            </value>
            <value>
                <fullName>CGCloud_Sales_User</fullName>
            </value>
            <value>
                <fullName>CGCloud_Security_Admin</fullName>
            </value>
            <value>
                <fullName>CGCloud_Supervisor</fullName>
            </value>
            <value>
                <fullName>CGCloud_Tour_User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>