force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Wholesaler_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Wholesaler_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a wholesaler or broker reference required for the sales documents of this template.</description>
    <label>Wholesaler Required</label>
    <type>Checkbox</type>
</CustomField>