force-app/main/default/objects/cgcloud__Order_Template__c/fields/cgcloud__Workflow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the workflow.</description>
    <label>Workflow</label>
    <referenceTo>cgcloud__Workflow__c</referenceTo>
    <relationshipLabel>Order Templates</relationshipLabel>
    <relationshipName>Order_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>