force-app/main/default/objects/cgcloud__Order_Template__c/recordTypes/cgcloud__Cash_Document.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Cash_Document</fullName>
    <active>true</active>
    <description>Cash Document record type for Order Template</description>
    <label>Cash Document</label>
</RecordType>