force-app/main/default/objects/cgcloud__Order_Template__c/recordTypes/cgcloud__Order_Entry.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Order_Entry</fullName>
    <active>true</active>
    <description>Order Entry record type for Order Template</description>
    <label>Order Entry</label>
</RecordType>