force-app/main/default/objects/cgcloud__Order_Template__c/validationRules/cgcloud__Add_Only_One_Main_Association_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Add_Only_One_Main_Association_Record</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Number_Of_Main_Associations__c &gt; 1</errorConditionFormula>
    <errorMessage>You can add only one main order item order template association record.</errorMessage>
</ValidationRule>