force-app/main/default/objects/cgcloud__Order_Template__c/validationRules/cgcloud__Lead_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Lead_Time_Validation</fullName>
    <active>true</active>
    <description>The Min Lead Time can&apos;t be greater than the Max Lead Time.</description>
    <errorConditionFormula>cgcloud__Max_Lead_Time__c &lt; cgcloud__Min_Lead_Time__c</errorConditionFormula>
    <errorMessage>The Min Lead Time can&apos;t be greater than the Max Lead Time.</errorMessage>
</ValidationRule>