force-app/main/default/objects/cgcloud__Order_Template__c/validationRules/cgcloud__List_Option_For_Selectable_Promotion.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__List_Option_For_Selectable_Promotion</fullName>
    <active>true</active>
    <description>List Option must be &apos;Flat List&apos; if the Order Template is relevant for Selectable Promotions.</description>
    <errorConditionFormula>AND(
          cgcloud__Consider_Selectable_Promotion__c,
          NOT(ISPICKVAL(cgcloud__List_Option__c, &apos;Flat List&apos;))	
        )</errorConditionFormula>
    <errorMessage>List Option must be &apos;Flat List&apos; if the Order Template is relevant for Selectable Promotions.</errorMessage>
</ValidationRule>