force-app/main/default/objects/cgcloud__Order_Template__c/validationRules/cgcloud__Selling_Assortment_Filter_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Selling_Assortment_Filter_Validation</fullName>
    <active>true</active>
    <description>Selling Assortment Filter on Order Template can&apos;t be activated if the Customer Selling Assortment isn&apos;t activated.</description>
    <errorConditionFormula>IF(AND( cgcloud__Customer_Selling_Assortment__c = false,  cgcloud__Selling_Assortment_Filter__c = true), true,false)</errorConditionFormula>
    <errorDisplayField>cgcloud__Selling_Assortment_Filter__c</errorDisplayField>
    <errorMessage>Selling Assortment Filter on Order Template can&apos;t be activated if the Customer Selling Assortment isn&apos;t activated.</errorMessage>
</ValidationRule>